# phpcm

./: .gitignore  CMakeLists.txt  LICENCE.md  Makefile.run  README.md  RELEASE.md  clear  cm.cc  cm_adapter.cc  cm_adapter.hpp  cm_class.cc  cm_class.hpp  cm_dependency.hpp  config.m4  crc32.h  test.php  unit.php
build-package/: initial-build-debian.sh  update-build-debian.sh
debug/: .gitignore  CMakeLists.txt  clear  config.h  debug.cpp  debug.debug.cpp  debug.debug.hpp  debug.hpp  debug.release.cpp  debug.release.hpp
debug.so/: CMakeLists.txt  config.h  debug.debug.hpp
libreactor/: .gitignore  CMakeLists.txt  example.cpp  main.cpp  reactor.cpp  reactor.hpp
persistentd/: .gitignore  CMakeLists.txt  IServerThread.hpp  backend.cpp  backend.hpp  config.h  config.h.in  frontend.cpp  frontend.hpp  packet.hpp  persistentd.cpp  storage.cpp  storage.hpp  test.cpp  thread.cpp  thread.hpp
persistentd/include/: debug.debug.hpp  debug.hpp  debug.release.hpp  reactor.hpp
phpmodule/: .gitignore  CMakeLists.txt  clear  cm.cc  cm_RVal.hpp  cm_ServerPair.hpp  cm_adapter.cc  cm_adapter.hpp  cm_adapter_test.cc  cm_class.cc  cm_class.hpp  cm_debug.hpp  cm_interface.cc  cm_interface.hpp  cm_wrapper.cc  cm_wrapper.hpp  config.h.in  config.m4  crc32.cc  debug.release.hpp  php_cm.hpp  phpunit.xml  test.php  unit.php
phpmodule/etc/: 20-cm.ini  20-cm.tst.ini
phpmodule/putests/: backendsTest.php  badConfigTest.php  dependencyTest.php  reshardTest.php  simpleTest.php
