cmake_minimum_required (VERSION 2.8.9)
project (phpcm)

#set(CMAKE_CXX_COMPILER "/usr/bin/g++-4.9")
#set(CMAKE_C_COMPILER "/usr/bin/gcc-4.9")
execute_process(COMMAND bash -c "dpkg-buildflags --get CXXFLAGS  | tr '\n' ' '" OUTPUT_VARIABLE DEBIAN_CXX)
execute_process(COMMAND bash -c "dpkg-buildflags --get CFLAGS | tr '\n' ' '" OUTPUT_VARIABLE DEBIAN_C)
execute_process(COMMAND bash -c "dpkg-buildflags --get LDFLAGS | tr '\n' ' '" OUTPUT_VARIABLE DEBIAN_LD)
#set(DEBIAN "dpkg-buildflags --get LDFLAGS")
set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} ${DEBIAN_CXX}")
set(CMAKE_C_FLAGS "${CMAKE_C_FLAGS} ${DEBIAN_C}")
set(CMAKE_SHARED_LINKER_FLAGS "${CMAKE_SHARED_LINKER_FLAGS} ${DEBIAN_LD}")
set(CMAKE_EXE_LINKER_FLAGS "${CMAKE_EXE_LINKER_FLAGS} ${DEBIAN_LD}")

add_subdirectory(debug)
add_subdirectory(libreactor)
add_subdirectory(phpmodule)
add_subdirectory(persistentd)
